[package]
name = "steam_workshop_analyzer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "swa"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"